feat(analytics-dashboard): initialize Flask analytics dashboard project structure
- Add Flask application factory and configuration management
- Create project specification documents for dashboard design and requirements
- Add route blueprints for HTML pages and RESTful API endpoints
- Create service layer module for data query operations
- Add static directories for CSS and JavaScript assets
- Add templates directory for Jinja2 HTML templates
- Update .env.example with Flask analytics dashboard configuration variables
- Update requirements.txt with Flask and related dependencies
- Add run_flask.py entry point for starting the application
- Establish three-tier architecture: Flask backend, service layer, and PostgreSQL database integration

--- a/.env.example
+++ b/.env.example
@@ -95,6 +95,30 @@ DB_POSTS_RETENTION_DAYS=90
 DB_LOGS_RETENTION_DAYS=30
 
 # -----------------------------------------------------------------------------
+# Flask Analytics Dashboard Configuration
+# -----------------------------------------------------------------------------
+# Flask server configuration
+FLASK_HOST=0.0.0.0
+FLASK_PORT=5000
+SECRET_KEY=change_this_to_a_random_secret_key
+
+# Flask debug mode (true/false) - NEVER enable in production!
+DEBUG=false
+
+# Cache configuration
+# Cache type: simple (in-memory) for development, redis for production
+CACHE_TYPE=simple
+CACHE_TIMEOUT=300
+CACHE_REDIS_URL=redis://localhost:6379/0
+
+# Dashboard configuration
+AUTO_REFRESH_INTERVAL=30
+POSTS_PER_PAGE=25
+
+# CORS configuration (comma-separated origins, or * for all)
+CORS_ORIGINS=*
+
+# -----------------------------------------------------------------------------
 # n8n Configuration
 # -----------------------------------------------------------------------------
 # n8n basic authentication
