--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ psycopg2-binary==2.9.9
 Flask==3.0.0
 Flask-Caching==2.1.0
 Flask-CORS==4.0.0
+Flask-Compress==1.14
 
 # Configuration Management
 python-dotenv==1.0.0
